--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -1,3 +1,20 @@
-<h1>CatPhotoApp</h1>
-<h2>Cat Photos</h2>
-<p>See more cat photos in our gallery.</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CatPhotoApp</title>
+</head>
+
+<body>
+    <main>
+        <h1>CatPhotoApp</h1>
+        <h2>Cat Photos</h2>
+        <!-- TODO: Add link to cat photos -->
+        <p>See more cat photos in our gallery.</p>
+    </main>
+</body>
+
+</html>
