--- a/CatPhotoApp/project1.html
+++ b/CatPhotoApp/project1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,14 @@
     <title>Projecto 1</title>
 </head>
 <body>
-    <h1>Acerca do Eugénio Carlos Matlava</h1>
-    <h2>Informações Pessoais</h2>
-    <p>
-        Eugénio Carlos Matlava, Formado em Engenharia de Software, com orientação para Aplicativos Web. Possui experiência em trabalhar com HTM, CSS e JavaScript Vanilla, e algumas tecnologias de back-end, tais como Java, PHP. 
-    </p>
+    <main>
+        <h1>Acerca do Eugénio Carlos Matlava</h1>
+        <h2>Informações Pessoais</h2>
+        <p>
+            Eugénio Carlos Matlava, Formado em Engenharia de Software, com orientação para Aplicativos Web. Possui
+            experiência em trabalhar com HTM, CSS e JavaScript Vanilla, e algumas tecnologias de back-end, tais como
+            Java, PHP.
+        </p>
+    </main>
 </body>
 </html>
