--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -44,7 +44,46 @@
         <section>
             <h2>Cat Form</h2>
             <form action="https://freecatphotoapp.com/submit-cat-photo">
-                <label><input type="radio"> Indoor</label>
+                <fieldset>
+                    <legend>Is your cat an indoor or outdoor cat?</legend>
+                    <label><input 
+                        type="radio" 
+                        id="indoor" 
+                        name="indoor-outdoor"
+                        value="indoor"> Indoor
+                    </label>
+                    <label><input 
+                        type="radio" 
+                        id="outdoor" 
+                        name="indoor-outdoor"
+                        value="outdoor"> Outdoor
+                    </label>
+                </fieldset>
+                <fieldset>
+                    <legend>What's your cat's personality?</legend>
+                    <input 
+                    type="checkbox" 
+                    id="loving"
+                    name="loving">
+                    <label for="loving">Loving
+                    </label>
+
+                    <input 
+                    type="checkbox" 
+                    id="lazy"
+                    name="personality"
+                    value="lazy">
+                    <label for="lazy">Lazy
+                    </label>
+
+                    <input 
+                    type="checkbox" 
+                    id="energetic"
+                    name="personality"
+                    value="energetic">
+                    <label for="energetic">Energetic
+                    </label>
+                </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
             </form>
