Fim da construcao com o footer

--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -50,7 +50,8 @@
                         type="radio" 
                         id="indoor" 
                         name="indoor-outdoor"
-                        value="indoor"> Indoor
+                        value="indoor"
+                        checked> Indoor
                     </label>
                     <label><input 
                         type="radio" 
@@ -64,7 +65,9 @@
                     <input 
                     type="checkbox" 
                     id="loving"
-                    name="loving">
+                    name="loving"
+                    value="loving"
+                    checked>
                     <label for="loving">Loving
                     </label>
 
@@ -89,5 +92,8 @@
             </form>
         </section>
     </main>
+    <footer>
+        <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
+    </footer>
 </body>
 </html>
